test/arrays/bradc/constArray.good
constArray.chpl:3: error: Assigning to a constant expression
