test/arrays/bradc/constArray.future
error message: const arrays

This test demonstrates that if an array is declared to be const,
it can be assigned to.  I believe this should result in an error.
